--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - main
 
-env:
-  TF_CLOUD_ORGANIZATION: "YOUR-ORGANIZATION-HERE"
-  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  TF_WORKSPACE: "learn-terraform-github-actions"
-  CONFIG_DIRECTORY: "./"
+#env:
+ # TF_CLOUD_ORGANIZATION: "YOUR-ORGANIZATION-HERE"
+ # TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
+#  TF_WORKSPACE: "learn-terraform-github-actions"
+ # CONFIG_DIRECTORY: "./"
 
 jobs:
   terraform:
