--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - main
 
-env:
-  TF_CLOUD_ORGANIZATION: "YOUR-ORGANIZATION-HERE"
-  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  TF_WORKSPACE: "learn-terraform-github-actions"
-  CONFIG_DIRECTORY: "./"
+#env:
+#TF_CLOUD_ORGANIZATION: "YOUR-ORGANIZATION-HERE"
+#TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
+# TF_WORKSPACE: "learn-terraform-github-actions"
+#  CONFIG_DIRECTORY: "./"
 
 jobs:
   terraform:
@@ -43,3 +43,13 @@ jobs:
         with:
           run: ${{ steps.apply-run.outputs.run_id }}
           comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
+
+      - name: Initiate Terraform
+        run: |
+          cd /Users/mujimoyen/Documents/ACADA/K8/project2/learn-terraform-github-actions
+          terraform init
+
+      - name: Apply Terraform changes
+        run: |
+          cd /Users/mujimoyen/Documents/ACADA/K8/project2/learn-terraform-github-actions
+          terraform apply -auto-approve
